--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "sharp": "^0.33.4",
     "tailwind-scrollbar": "^3.1.0",
     "zod": "^3.23.8"
   },
