--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^5.16.5",
+    "@reduxjs/toolkit": "^2.2.7",
     "framer-motion": "^11.3.17",
     "jose": "^5.6.3",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-toolkit": "^1.1.2",
     "sharp": "^0.33.4",
     "tailwind-scrollbar": "^3.1.0",
     "zod": "^3.23.8"
